@@ -51,7 +51,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 public class SendHelper {
 
@@ -123,8 +122,9 @@ public class SendHelper {
         final var result = handleSendMessage(recipientId,
                 (messageSender, address, unidentifiedAccess) -> messageSender.sendReceipt(address,
                         unidentifiedAccess,
-                        receiptMessage));
-        messageSendLogStore.insertIfPossible(receiptMessage.getWhen(), result, ContentHint.IMPLICIT);
+                        receiptMessage,
+                        false));
+        messageSendLogStore.insertIfPossible(receiptMessage.getWhen(), result, ContentHint.IMPLICIT, false);
         handleSendMessageResult(result);
         return result;
     }
@@ -141,7 +141,9 @@ public class SendHelper {
                         unidentifiedAccess,
                         ContentHint.IMPLICIT,
                         message,
-                        SignalServiceMessageSender.IndividualSendEvents.EMPTY));
+                        SignalServiceMessageSender.IndividualSendEvents.EMPTY,
+                        false,
+                        false));
     }
 
     public SendMessageResult sendRetryReceipt(
@@ -238,7 +240,8 @@ public class SendHelper {
                             timestamp,
                             messageSendLogEntry.content(),
                             messageSendLogEntry.contentHint(),
-                            Optional.empty()));
+                            Optional.empty(),
+                            messageSendLogEntry.urgent()));
         }
 
         final var groupId = messageSendLogEntry.groupId().get();
@@ -267,7 +270,8 @@ public class SendHelper {
                         timestamp,
                         contentToSend,
                         messageSendLogEntry.contentHint(),
-                        Optional.of(group.getGroupId().serialize())));
+                        Optional.of(group.getGroupId().serialize()),
+                        messageSendLogEntry.urgent()));
 
         if (result.isSuccess()) {
             final var address = context.getRecipientHelper().resolveSignalServiceAddress(recipientId);
@@ -275,7 +279,7 @@ public class SendHelper {
                     .getDevices()
                     .stream()
                     .map(device -> new SignalProtocolAddress(address.getIdentifier(), device))
-                    .collect(Collectors.toList());
+                    .toList();
 
             account.getSenderKeyStore().markSenderKeySharedWith(group.getDistributionId(), addresses);
         }
@@ -316,6 +320,7 @@ public class SendHelper {
         final var messageSendLogStore = account.getMessageSendLogStore();
         final AtomicLong entryId = new AtomicLong(-1);
 
+        final var urgent = true;
         final LegacySenderHandler legacySender = (recipients, unidentifiedAccess, isRecipientUpdate) -> messageSender.sendDataMessage(
                 recipients,
                 unidentifiedAccess,
@@ -329,14 +334,16 @@ public class SendHelper {
                         if (entryId.get() == -1) {
                             final var newId = messageSendLogStore.insertIfPossible(message.getTimestamp(),
                                     sendResult,
-                                    contentHint);
+                                    contentHint,
+                                    urgent);
                             entryId.set(newId);
                         } else {
                             messageSendLogStore.addRecipientToExistingEntryIfPossible(entryId.get(), sendResult);
                         }
                     }
                 },
-                () -> false);
+                () -> false,
+                urgent);
         final SenderKeySenderHandler senderKeySender = (distId, recipients, unidentifiedAccess, isRecipientUpdate) -> {
             final var res = messageSender.sendGroupDataMessage(distId,
                     recipients,
@@ -344,10 +351,14 @@ public class SendHelper {
                     isRecipientUpdate,
                     contentHint,
                     message,
-                    SignalServiceMessageSender.SenderKeyGroupEvents.EMPTY);
+                    SignalServiceMessageSender.SenderKeyGroupEvents.EMPTY,
+                    urgent);
             synchronized (entryId) {
                 if (entryId.get() == -1) {
-                    final var newId = messageSendLogStore.insertIfPossible(message.getTimestamp(), res, contentHint);
+                    final var newId = messageSendLogStore.insertIfPossible(message.getTimestamp(),
+                            res,
+                            contentHint,
+                            urgent);
                     entryId.set(newId);
                 } else {
                     messageSendLogStore.addRecipientToExistingEntryIfPossible(entryId.get(), res);
@@ -477,7 +488,10 @@ public class SendHelper {
                 continue;
             }
 
-            final var identity = account.getIdentityKeyStore().getIdentityInfo(recipientId);
+            final var serviceId = account.getRecipientAddressResolver()
+                    .resolveRecipientAddress(recipientId)
+                    .getServiceId();
+            final var identity = account.getIdentityKeyStore().getIdentityInfo(serviceId);
             if (identity == null || !identity.getTrustLevel().isTrusted()) {
                 continue;
             }
@@ -522,7 +536,7 @@ public class SendHelper {
         final var recipientIdList = new ArrayList<>(recipientIds);
 
         long keyCreateTime = account.getSenderKeyStore()
-                .getCreateTimeForOurKey(account.getSelfRecipientId(), account.getDeviceId(), distributionId);
+                .getCreateTimeForOurKey(account.getAci(), account.getDeviceId(), distributionId);
         long keyAge = System.currentTimeMillis() - keyCreateTime;
 
         if (keyCreateTime != -1 && keyAge > TimeUnit.DAYS.toMillis(14)) {
@@ -531,19 +545,19 @@ public class SendHelper {
                     keyCreateTime,
                     keyAge,
                     TimeUnit.MILLISECONDS.toDays(keyAge));
-            account.getSenderKeyStore().deleteOurKey(account.getSelfRecipientId(), distributionId);
+            account.getSenderKeyStore().deleteOurKey(account.getAci(), distributionId);
         }
 
         List<SignalServiceAddress> addresses = recipientIdList.stream()
                 .map(context.getRecipientHelper()::resolveSignalServiceAddress)
-                .collect(Collectors.toList());
+                .toList();
         List<UnidentifiedAccess> unidentifiedAccesses = context.getUnidentifiedAccessHelper()
                 .getAccessFor(recipientIdList)
                 .stream()
                 .map(Optional::get)
                 .map(UnidentifiedAccessPair::getTargetUnidentifiedAccess)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         try {
             List<SendMessageResult> results = sender.send(distributionId,
@@ -564,11 +578,11 @@ public class SendHelper {
             return null;
         } catch (NoSessionException e) {
             logger.warn("No session. Falling back to legacy sends.", e);
-            account.getSenderKeyStore().deleteOurKey(account.getSelfRecipientId(), distributionId);
+            account.getSenderKeyStore().deleteOurKey(account.getAci(), distributionId);
             return null;
         } catch (InvalidKeyException e) {
             logger.warn("Invalid key. Falling back to legacy sends.", e);
-            account.getSenderKeyStore().deleteOurKey(account.getSelfRecipientId(), distributionId);
+            account.getSenderKeyStore().deleteOurKey(account.getAci(), distributionId);
             return null;
         } catch (InvalidRegistrationIdException e) {
             logger.warn("Invalid registrationId. Falling back to legacy sends.", e);
@@ -583,13 +597,16 @@ public class SendHelper {
             SignalServiceDataMessage message, RecipientId recipientId
     ) {
         final var messageSendLogStore = account.getMessageSendLogStore();
+        final var urgent = true;
         final var result = handleSendMessage(recipientId,
                 (messageSender, address, unidentifiedAccess) -> messageSender.sendDataMessage(address,
                         unidentifiedAccess,
                         ContentHint.RESENDABLE,
                         message,
-                        SignalServiceMessageSender.IndividualSendEvents.EMPTY));
-        messageSendLogStore.insertIfPossible(message.getTimestamp(), result, ContentHint.RESENDABLE);
+                        SignalServiceMessageSender.IndividualSendEvents.EMPTY,
+                        urgent,
+                        false));
+        messageSendLogStore.insertIfPossible(message.getTimestamp(), result, ContentHint.RESENDABLE, urgent);
         handleSendMessageResult(result);
         return result;
     }
@@ -634,7 +651,7 @@ public class SendHelper {
                 message.getTimestamp(),
                 Optional.of(message),
                 message.getExpiresInSeconds(),
-                Map.of(address, true),
+                Map.of(address.getServiceId(), true),
                 false,
                 Optional.empty(),
                 Set.of());
@@ -674,7 +691,8 @@ public class SendHelper {
         }
         if (r.getIdentityFailure() != null) {
             final var recipientId = context.getRecipientHelper().resolveRecipient(r.getAddress());
-            context.getIdentityHelper().handleIdentityFailure(recipientId, r.getIdentityFailure());
+            context.getIdentityHelper()
+                    .handleIdentityFailure(recipientId, r.getAddress().getServiceId(), r.getIdentityFailure());
         }
     }
 
